tests/paczka1/small_fuzzy/93024824.err
Error in line 2: 1SMaZ A939 436,6
Error in line 12: OUaEiUorS A205 6,6
